<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:launchMode="singleTask"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/getStarted"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginBottom="120dp"
        android:drawableEnd="@drawable/next"
        android:onClick="openLoginActivity"
        android:text="@string/getStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Healthful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/welcomeText1"
        android:textColor="#CD1C1C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/welcomeText2"

        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="320dp"
        android:layout_height="198dp"
        android:contentDescription="@string/imageDesc"
        android:src="@drawable/vegan"
        app:layout_constraintBottom_toTopOf="@+id/Healthful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

</androidx.constraintlayout.widget.ConstraintLayout>