<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--        android:onTextChanged="@{onTextChanged}"-->

    <Button
        android:id="@+id/searchButton"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginTop="47dp"
        android:text="@string/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <EditText
        android:id="@+id/search"
        android:layout_width="366dp"
        android:layout_height="175dp"
        android:layout_marginTop="76dp"
        android:autofillHints="word"
        android:background="@drawable/btn"
        android:hint="@string/request"
        android:textAlignment="center"
        android:inputType="text"
        android:maxLines="4"
        android:textColorPrimary="@color/white"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

    </EditText>

    <TextView
        android:id="@+id/response"
        android:layout_width="372dp"
        android:layout_height="362dp"
        android:layout_marginTop="68dp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/btn"
        android:padding="48dp"
        android:hint="@string/response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        android:scrollbars="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>